[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/MenuFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://GUI/PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.5
margin_top = -105.0
margin_right = 174.5
margin_bottom = 105.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 349.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 1 )
text = "Pause"
align = 1
valign = 1

[node name="ButtonResume" type="Button" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 349.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 1 )
text = "Resume"

[node name="ButtonOptions" type="Button" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 349.0
margin_bottom = 155.0
custom_fonts/font = ExtResource( 1 )
text = "Options"

[node name="ButtonMainMenu" type="Button" parent="VBoxContainer"]
margin_top = 159.0
margin_right = 349.0
margin_bottom = 210.0
custom_fonts/font = ExtResource( 1 )
text = "Return to Main Menu"
